--- a/app/src/main/res/layout/list_item_course.xml
+++ b/app/src/main/res/layout/list_item_course.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/design_default_color_background"
+        android:clickable="true"
         app:cardCornerRadius="5dp"
         app:cardElevation="5dp"
         app:contentPadding="10dp">
