--- a/app/src/main/res/layout/list_item_coursecomplete.xml
+++ b/app/src/main/res/layout/list_item_coursecomplete.xml
@@ -12,16 +12,23 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/card"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="267dp"
         android:backgroundTint="@color/design_default_color_background"
         app:cardCornerRadius="5dp"
         app:cardElevation="5dp"
         app:contentPadding="10dp">
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="191dp"
+            android:layout_width="379dp"
+            android:layout_height="246dp"
             android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tipoPersona"
+                android:layout_width="match_parent"
+                android:layout_height="46dp"
+                android:layout_weight="0"
+                android:text="Tipo" />
 
             <TextView
                 android:id="@+id/idCourse"
