--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -52,10 +52,10 @@
                 android:inputType="textPassword"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/usuarioInput1" />
+                app:layout_constraintTop_toBottomOf="@+id/name" />
 
             <EditText
-                android:id="@+id/username"
+                android:id="@+id/numStudent"
                 android:layout_width="350dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
@@ -76,7 +76,7 @@
                 android:inputType="textPersonName"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/username" />
+                app:layout_constraintTop_toBottomOf="@+id/usuarioInput1" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
